# money

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-0-bootstrap.txt  task-0-ci-check.txt  task-1-contract-invalid.json  task-1-policy-block.json  task-1-policy-snapshot-check.txt  task-1-stale-detection.txt  task-1-stale-test.md  task-2-claim-audit.txt  task-2-idempotent.json  task-2-scorecard-structure.txt  task-3-fallback-check.txt  task-3-matrix-coverage.txt  task-3-originality-block.json  task-3a-seedance-block.json  task-3a-seedance-output.json  task-4-failure-path.txt  task-4-ja-output.json  task-4-policy-block.json  task-4-threshold-schema.txt  task-5-decision-immutability.json  task-5-human-gate.json  task-5-review-queue.json  task-5-scenario-coverage.txt  task-5-sla-expiry-block.json  task-5-slo-breach-audit.txt  task-6-idempotency.json  task-6-partial-failure.json  task-6-rollback-audit.txt  task-6-traceability.txt  task-7-cost-breaker.json  task-7-retry-ceiling.json  task-8-kpi-schema.json  task-9-e2e-matrix.json  task-9-edge-cases.json  task-9-fidelity-gate.json  task-9-playwright-constraint.json  task-9-qc-thresholds.json  task-9-release-gate.json  (+1 more)
tests/: AGENTS.md  test_bootstrap.py  test_localization_pipeline.py  test_metrics_weekly_kpi.py  test_orchestration_workflow.py  test_publisher_service.py  test_review_queue.py  test_scene_generation_service.py  test_script_generation_pipeline.py  test_task9_e2e_hardening.py  test_trend_ingestion.py
(+136 files in other folders)
