[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "money"
version = "0.1.0"
description = "Trend-driven content monetization pipeline"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy==0.971",
  "pytest==6.2.5",
  "ruff==0.0.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py36"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.6"
files = ["src", "tests"]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "(^setup\\.py$|^\\.venv/)"
